<resources>
    <string name="app_name">Timer</string>
    <string name="stop_timer">stop Timer</string>
    <string name="resume_timer">resume Timer</string>
    <string name="set_timer">set Timer</string>
    <string name="repeat">repeat</string>
    <string name="maxtime">maxTime</string>
    <string name="repeat_minutes">repeat Minutes</string>
    <string name="max_minutes">max Minutes</string>
    <string name="confirm">confirm</string>
    <string name="stop">stop</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="repeats">repeats:</string>
    <string name="firstrepeat">firstrepeat</string>
    <string name="secondrepeat" />
    <string name="firstmax" />
    <string name="secondmax" />
    <string name="music_menu">Music Menu</string>
    <string name="cancel_timer">cancel Timer</string>
    <string name="Music" />
    <string name="ignore">ignore</string>
</resources>